# mcprouter

./: .gitignore  AUTO_CONNECT_REPORT.md  CLEANUP_GUIDE.md  FIXES_SUMMARY.md  MIGRATION_REPORT.md  PARAM_FIX_REPORT.md  README.md  README.zh.md  TOOL_REFRESH_FIX.md  TOOL_SYNC_REPORT.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tailwind.config.js  test-command-paths.js  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.trae/rules/: project_rules.md
openspec/: AGENTS.md  project.md
openspec/changes/add-bearer-auth/: design.md
openspec/changes/archive/2025-10-26-refactor-tool-level-auth/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-26-refactor-tool-level-auth/specs/authorization/: spec.md
openspec/changes/archive/2025-10-26-refactor-tool-level-auth/specs/database/: spec.md
openspec/changes/archive/2025-10-27-update-button-theme-colors/: proposal.md  tasks.md
openspec/changes/archive/2025-10-27-update-button-theme-colors/specs/ui-theme/: spec.md
openspec/changes/archive/2025-10-29-optimize-service-manager-ui/: proposal.md  tasks.md
openspec/changes/archive/2025-10-29-optimize-service-manager-ui/specs/ui-service-management/: spec.md
openspec/changes/archive/2025-10-31-add-responsive-layout/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-31-add-responsive-layout/specs/responsive-ui/: spec.md
openspec/changes/archive/2025-10-31-refactor-backend-command-organization/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-10-31-refactor-backend-command-organization/specs/backend-architecture/: spec.md
openspec/changes/archive/2025-10-31-remove-redundant-commands/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-15-add-bearer-auth/: proposal.md  tasks.md
openspec/changes/archive/2025-11-15-add-bearer-auth/specs/aggregator-auth/: spec.md
openspec/changes/archive/2025-11-16-add-token-permission-management-20251116-133408/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-16-add-token-permission-management-20251116-133408/specs/token-permissions/: spec.md
openspec/changes/archive/2025-11-16-migrate-dynamic-token-management/: design.md  proposal.md  tasks.md
openspec/changes/archive/2025-11-16-migrate-dynamic-token-management/specs/aggregator-auth/: spec.md
openspec/changes/archive/2025-11-16-migrate-dynamic-token-management/specs/token-management/: spec.md
openspec/changes/replace-rmcp-with-rust-mcp-sdk/: proposal.md  tasks.md
openspec/changes/replace-rmcp-with-rust-mcp-sdk/specs/backend-architecture/: spec.md
openspec/changes/replace-rmcp-with-rust-mcp-sdk/specs/ui-service-management/: spec.md
openspec/specs/aggregator-auth/: spec.md
openspec/specs/backend-architecture/: spec.md
openspec/specs/responsive-ui/: spec.md
openspec/specs/token-management/: spec.md
openspec/specs/token-permissions/: spec.md
openspec/specs/ui-service-management/: spec.md
openspec/specs/ui-theme/: spec.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial_schema.sql  002_add_token_fields.sql  003_add_sessions_table.sql  004_remove_resource_path.sql  005_refactor_permissions_system.sql
src-tauri/src/: aggregator.rs  auth_context.rs  config.rs  error.rs  http_client.rs  lib.rs  main.rs  mcp_client.rs  mcp_manager.rs  mcp_manager.rs.backup  migration_runner.rs  session_manager.rs  shell_environment.rs  state_manager.rs  task_manager.rs  token_manager.rs  token_permissions_test.rs  tool_manager.rs  types.rs  types_test.rs
src-tauri/src/commands/: api_key.rs  api_key.rs.bak  app_info.rs  config.rs  dashboard.rs  marketplace.rs  marketplace.rs.bak  marketplace.rs.bak2  mcp_server.rs  mod.rs  permission_management.rs  settings.rs  token_management.rs  tool.rs  tool.rs.bak  tool.rs.bak3  tool_manager.rs
src-tauri/src/config/: api_key_config.rs  file_manager.rs  mcp_server_config.rs  mod.rs
src-tauri/src/db/: connection.rs  mod.rs  models.rs
src-tauri/src/db/repositories/: api_key_repository.rs  api_key_server_repository.rs  api_key_tool_repository.rs  mcp_server_repository.rs  mod.rs  tool_repository.rs
src-tauri/src/entities/: mcp_prompt.rs  mcp_resource.rs  mcp_server.rs  mcp_tool.rs  mod.rs  permission.rs  token.rs
src-tauri/src/marketplace/: mod.rs
src-tauri/src/marketplace/providers/: modelscope.rs
src-tauri/src/migration/: m20240101_000001_create_initial_tables.rs  m20241212_000002_add_mcp_metadata_fields.rs  m20250113_remove_version_fields.rs  mod.rs
src-tauri/src/migrations/: 001_initial.sql  001_initial_schema.sql  002_tool_level_auth.sql
src-tauri/src/storage/: config.rs  init.rs  manager.rs  mcp_server_storage.rs  mod.rs  orm_storage.rs  permission_storage.rs  session_storage.rs  sqlite_storage.rs  token_storage.rs
src-tauri/tests/: mcp_client_test.rs
src/components/: AboutModal.tsx  AntdConfigProvider.tsx  ApiKeyPermissionSelector.tsx  CacheManager.tsx  ConfirmModal.tsx  ErrorBoundary.tsx  InlineEditableCell.tsx  InstallConfirmModal.tsx  LanguageSelector.tsx  Layout.tsx  Modal.tsx  PermissionSelector.tsx  PermissionTab.tsx  ServiceDetail.tsx  SystemToolManager.tsx  ThemeSelector.tsx  ToolManager.tsx
src/constants/: language.ts
src/contexts/: AppContext.tsx  ErrorContext.tsx
src/locales/: en-US.json  index.ts  zh-CN.json
src/pages/: ApiKeys.tsx  Dashboard.tsx  Marketplace.tsx  McpServerManager.tsx  Settings.tsx  TokenManagement.tsx
src/services/: api-key-service.ts  api.ts  config-service.ts  dashboard-service.ts  marketplace-service.ts  mcp-server-service.ts  permissionService.ts  toastService.ts  tool-manager-service.ts  tool-service.ts
src/theme/: antd-config.ts
src/types/: index.ts  permissions.ts
src/utils/: permissionUtils.ts
src/utils/__tests__/: permissionUtils.test.ts
