[package]
name = "mcprouter"
version = "0.1.0"
description = "MCP Router"
authors = ["Xijun Dai <daixijun1990@gmail.com>"]
edition = "2021"

[lints.rust]
dead_code = "deny"
unused_imports = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mcprouter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-log = "0.2"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
regex = "1.10"
if-addrs = "0.11"
rustc_version = "0.4"
which = "8.0"
futures = "0.3"
http = "1.0"
# MCP SDK - 使用官方 rmcp
rmcp = { version = "0.10.0", features = [
    "client",
    "server",
    "macros",
    "transport-child-process",
    "transport-sse-client",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "transport-sse-client-reqwest",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "client-side-sse",
    "reqwest",
] }
rmcp-macros = "0.10.0"
async-trait = "0.1"

process-wrap = "8.2"
axum = "0.8.6"
hyper = "1.7.0"
tower = "0.5.2"
tower-http = "0.6.6"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
log = "0.4.28"
scopeguard = "1.2.0"
tauri-plugin-shell = "2.3.1"
base64 = "0.22.1"
tracing-appender = "0.2.3"
rand = "0.8"
sha2 = "0.10"
dashmap = "6.1"

[dev-dependencies]
tempfile = "3.8"
