[package]
name = "mcprouter"
version = "0.1.0"
description = "MCP Router"
authors = ["Xijun Dai <daixijun1990@gmail.com>"]
edition = "2021"
default-run = "mcprouter"

[lints.rust]
dead_code = "deny"
unused_imports = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mcprouter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json", "stream"] }
uuid = { version = "1.0", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
strum = { version = "0.26", features = ["derive"] }
strum_macros = "0.26"
tracing = "0.1"
tracing-log = "0.2"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
if-addrs = "0.11"
rustc_version = "0.4"
which = "8.0"
http = "1.0"
# MCP SDK - 使用官方 rmcp
rmcp = { git = "https://github.com/daixijun/mcp-rust-sdk", branch = "feat/streamable-http-client", features = [
    "client",
    "server",
    "macros",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "reqwest",
] }
async-trait = "0.1"

axum = "0.8.6"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-os = "2"
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
log = "0.4.28"
scopeguard = "1.2.0"
tauri-plugin-shell = "2.3.1"
base64 = "0.22.1"
# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
tabled = "0.15"

# Tool management dependencies
zip = "2.2"
flate2 = "1.0"
tar = "0.4"

# SeaORM - 最新稳定版本
sea-orm = { version = "1.1", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
] }
sea-orm-migration = "1.1"
sea-query = "0.31"
rand = "0.9.2"

